--- a/config/base.yaml
+++ b/config/base.yaml
@@ -18,12 +18,11 @@ llm:
   api:
     key: ???
     base_url: ???
-    model: Qwen/Qwen3-30B-A3B-Instruct-2507
-  max_retries: 3
   timeout: 180
   generation_kwargs:
     max_tokens: 16384
     temperature: 0.4
+    model: gpt-4o-mini
   language: English
 
 reranker:
