update config yaml

--- a/config/base.yaml
+++ b/config/base.yaml
@@ -1,42 +1,42 @@
 zotero:
-  user_id: ???
-  api_key: ???
-  include_path: null
+  user_id: ??? # User ID of your Zotero account.
+  api_key: ??? # An Zotero API key with read access.
+  include_path: null # A glob pattern marking the Zotero collections that should be included. Example: "2026/survey/**"
 
 source:
   arxiv:
-    query: ???
+    query: ??? # The categories of target arxiv papers. Use `+` to concatenate multiple categories. Find the abbr of your research area from [here](https://arxiv.org/category_taxonomy). Example: cs.AI+cs.CV+cs.LG+cs.CL
 
 email:
-  sender: ???
-  receiver: ???
-  smtp_server: ???
-  smtp_port: ???
-  sender_password: ???
+  sender: ??? # The email account of the SMTP server that sends you email. Example: abc@qq.com
+  receiver: ??? # The email account that receives the paper list. Example: abc@outlook.com
+  smtp_server: ??? # The SMTP server that sends the email. Example: smtp.qq.com
+  smtp_port: ??? # The port of SMTP server. Example: 465
+  sender_password: ??? # The password of the sender account. Note that it's not necessarily the password for logging in the e-mail client, but the authentication code for SMTP service. Ask your email provider for this. Example: abcdefghijklmn
 
 llm:
   api:
-    key: ???
-    base_url: ???
-  timeout: 180
+    key: ??? # API Key of your LLM API. Example: sk-xxx
+    base_url: ??? # API URL of your LLM API. Example: https://api.openai.com/v1
   generation_kwargs:
+  # Arguments for the LLM API. See [here](https://platform.openai.com/docs/api-reference/chat/create) for more details.
     max_tokens: 16384
     temperature: 0.4
     model: ???
-  language: English
+  language: English # Preferred language for the TL;DR. Example: English
 
 reranker:
   local:
-    model: Qwen/Qwen3-Embedding-0.6B
+    model: Qwen/Qwen3-Embedding-0.6B # The Hugging Face model name of the local embedding model. Example: Qwen/Qwen3-Embedding-0.6B
   api:
-    key: ???
-    base_url: ???
-    model: ???
+    key: null # API Key of your embedding model API. Example: sk-xxx
+    base_url: null # API URL of your embedding model API. Example: https://api.openai.com/v1
+    model: null # The model name of the embedding model. Example: text-embedding-3-large
 
 executor:
-  debug: false
-  send_empty: false
-  max_workers: 10
-  max_paper_num: 100
-  source: ???
-  reranker: local
+  debug: false # Whether to use debug mode. Example: true
+  send_empty: false # Whether to send an empty email even if no new papers today. Example: true
+  max_workers: 10 # Concurrent workers for processing papers. Example: 10
+  max_paper_num: 100 # The maximum number of the papers presented in the email. Example: 100
+  source: ??? # The sources of papers to retrieve. Example: ['arxiv']
+  reranker: local # The reranker to use. Example: 'local' or 'api'
