--- a/config/custom.yaml
+++ b/config/custom.yaml
@@ -30,5 +30,5 @@ source:
     query: cs.AI+cs.CV+cs.LG+cs.CL
 
 executor:
-  debug: ${oc.env:DEBUG}
+  debug: ${oc.env:DEBUG,null}
   source: ['arxiv']
