--- a/config/base.yaml
+++ b/config/base.yaml
@@ -26,7 +26,11 @@ llm:
 
 reranker:
   local:
-    model: Qwen/Qwen3-Embedding-0.6B # The Hugging Face model name of the local embedding model. Example: Qwen/Qwen3-Embedding-0.6B
+    model: jinaai/jina-embeddings-v5-text-nano # The Hugging Face model name of the local embedding model. Example: jinaai/jina-embeddings-v5-text-nano
+    encode_kwargs:
+    # The kwargs for the encode method of the local embedding model. Details see [here](https://www.sbert.net/docs/package_reference/SentenceTransformer.html#sentence_transformers.SentenceTransformer.encode)
+      task: retrieval
+      prompt_name: document
   api:
     key: null # API Key of your embedding model API. Example: sk-xxx
     base_url: null # API URL of your embedding model API. Example: https://api.openai.com/v1
