--- a/config/base.yaml
+++ b/config/base.yaml
@@ -5,7 +5,11 @@ zotero:
 
 source:
   arxiv:
-    query: ??? # The categories of target arxiv papers. Use `+` to concatenate multiple categories. Find the abbr of your research area from [here](https://arxiv.org/category_taxonomy). Example: cs.AI+cs.CV+cs.LG+cs.CL
+    query: null # The categories of target arxiv papers. Use `+` to concatenate multiple categories. Find the abbr of your research area from [here](https://arxiv.org/category_taxonomy). Example: cs.AI+cs.CV+cs.LG+cs.CL
+  biorxiv:
+    category: null # The categories of target biorxiv papers. Find categories from [here](https://www.biorxiv.org/). Example: ["biochemistry","animal behavior and cognition"]
+  medrxiv:
+    category: null # The categories of target medrxiv papers. Find categories from [here](https://www.medrxiv.org/) Example: ["psychiatry and clinical psychology", "neurology"]
 
 email:
   sender: ??? # The email account of the SMTP server that sends you email. Example: abc@qq.com
