use arxiv.category

--- a/config/custom.yaml
+++ b/config/custom.yaml
@@ -19,7 +19,7 @@ llm:
 
 source:
   arxiv:
-    query: cs.AI+cs.CV+cs.LG+cs.CL
+    category: ["cs.AI","cs.CV","cs.LG","cs.CL"]
 
 executor:
   debug: ${oc.env:DEBUG,null}
